--- a/data/bug-list.html
+++ b/data/bug-list.html
@@ -1,39 +1,39 @@
 <html>
 <head>
+    <meta charset="utf-8">
 </head>
 <body>
 
     <form id="user-input">
         <label for="user-name">Todos For</label>
             <input type="text" name="user-name" id="user-name" />
-        <button id="save">Save</button>
     </form>
 
     <div id="bug-list">
 
         <div id="to-review">
-            <li class="bug-list">
-            </li>
+            <ul class="bug-list">
+            </ul>
         </div>
 
         <div id="to-check-in">
-            <li class="bug-list">
-            </li>
+            <ul class="bug-list">
+            </ul>
         </div>
 
         <div id="to-nag">
-            <li class="bug-list">
-            </li>
+            <ul class="bug-list">
+            </ul>
         </div>
 
         <div id="to-respond">
-            <li class="bug-list">
-            </li>
+            <ul class="bug-list">
+            </ul>
         </div>
 
         <div id="to-fix">
-            <li class="bug-list">
-            </li>
+            <ul class="bug-list">
+            </ul>
         </div>
 
     </div>
