Wrapped contents in div#content

--- a/data/bug-list.html
+++ b/data/bug-list.html
@@ -4,38 +4,42 @@
 </head>
 <body>
 
-    <form id="user-input">
-        <label for="user-name">Todos For</label>
-            <input type="text" name="user-name" id="user-name" />
-    </form>
+    <div id="content">
 
-    <div id="bug-list">
+        <form id="user-input">
+            <label for="user-name">Todos For</label>
+                <input type="text" name="user-name" id="user-name" />
+        </form>
 
-        <div id="to-review">
-            <ul class="bug-list">
-            </ul>
+        <div id="bug-list">
+
+            <div id="to-review">
+                <ul class="bug-list">
+                </ul>
+            </div>
+
+            <div id="to-check-in">
+                <ul class="bug-list">
+                </ul>
+            </div>
+
+            <div id="to-nag">
+                <ul class="bug-list">
+                </ul>
+            </div>
+
+            <div id="to-respond">
+                <ul class="bug-list">
+                </ul>
+            </div>
+
+            <div id="to-fix">
+                <ul class="bug-list">
+                </ul>
+            </div>
+
         </div>
-
-        <div id="to-check-in">
-            <ul class="bug-list">
-            </ul>
-        </div>
-
-        <div id="to-nag">
-            <ul class="bug-list">
-            </ul>
-        </div>
-
-        <div id="to-respond">
-            <ul class="bug-list">
-            </ul>
-        </div>
-
-        <div id="to-fix">
-            <ul class="bug-list">
-            </ul>
-        </div>
-
+        
     </div>
 
 </body>
