--- a/data/bug-list.html
+++ b/data/bug-list.html
@@ -1,39 +1,54 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <title>Bugzilla</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="bug-list.css"/>
 </head>
 <body>
 
     <div id="content">
 
-        <form id="user-input">
-            <label for="user-name">Todos For</label>
+        <form id="user-form">
+            <label id="user-label" for="user-name">Todos For</label>
                 <input type="text" name="user-name" id="user-name" />
         </form>
 
-        <div id="bug-list">
+        <div id="bug-lists">
 
-            <div id="to-review">
+            <div id="to-review" class="bug-category">
+                <div class="category-head"><span class="category-count">52</span><span class="category-name">To Review</span></div>
+                <!-- This list should actually be in an iframe. Inject bug html into the srcdoc property. -->
+                <ul class="bug-list">
+                    <li class="bug">
+                        <a href="#"><span class="bug-number">12345</span> - <span class="bug-name">Description and Other Info</span></a>
+                    </li>
+                    <li class="bug">
+                        <a href="#"><span class="bug-number">67890</span> - <span class="bug-name">A Different Bug</span></a>
+                    </li>
+                </ul>
+            </div>
+
+            <div id="to-check-in" class="bug-category">
+                <div class="category-head"><span class="category-count">4</span><span class="category-name">To Check In</span></div>
                 <ul class="bug-list">
                 </ul>
             </div>
 
-            <div id="to-check-in">
+            <div id="to-nag" class="bug-category">
+                <div class="category-head"><span class="category-count">1</span><span class="category-name">To Nag</span></div>
                 <ul class="bug-list">
                 </ul>
             </div>
 
-            <div id="to-nag">
+            <div id="to-respond" class="bug-category">
+                <div class="category-head"><span class="category-count">23</span><span class="category-name">To Respond</span></div>
                 <ul class="bug-list">
                 </ul>
             </div>
 
-            <div id="to-respond">
-                <ul class="bug-list">
-                </ul>
-            </div>
-
-            <div id="to-fix">
+            <div id="to-fix" class="bug-category">
+                <div class="category-head"><span class="category-count">0</span><span class="category-name">To Fix</span></div>
                 <ul class="bug-list">
                 </ul>
             </div>
@@ -41,6 +56,10 @@
         </div>
         
     </div>
+
+    <script type="text/javascript" src="user.js"></script>
+    <script type="text/javascript" src="http://cloud.github.com/downloads/harthur/bz.js/bz-0.2.4.js"></script>
+    <script type="text/javascript" src="bug-manager.js"></script>
 
 </body>
 </html>
