Added the bug list class to the page for testing.

--- a/data/bug-list.html
+++ b/data/bug-list.html
@@ -59,6 +59,7 @@
 
     <script type="text/javascript" src="user.js"></script>
     <script type="text/javascript" src="http://cloud.github.com/downloads/harthur/bz.js/bz-0.2.4.js"></script>
+    <script type="text/javascript" src="bug-list.js"></script>
     <script type="text/javascript" src="bug-manager.js"></script>
 
 </body>
