Incude our Bug class and jQuery.

--- a/data/bug-list.html
+++ b/data/bug-list.html
@@ -18,7 +18,6 @@
 
             <div id="to-review" class="bug-category">
                 <div class="category-head"><span class="category-count">0</span><span class="category-name">To Review</span></div>
-                <!-- This list should actually be in an iframe. Inject bug html into the srcdoc property. -->
                 <ul class="bug-list">
                     <li class="bug">
                         <a href="#"><span class="bug-number">0</span> - <span class="bug-name">Description and Other Info</span></a>
@@ -57,7 +56,9 @@
         
     </div>
 
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="user.js"></script>
+    <script type="text/javascript" src="bug.js"></script>
     <script type="text/javascript" src="http://cloud.github.com/downloads/harthur/bz.js/bz-0.2.4.js"></script>
     <script type="text/javascript" src="bug-list.js"></script>
     <script type="text/javascript" src="bug-manager.js"></script>
