User and BugManager are associated, so we get the bugs for the input user.

--- a/data/bug-list.html
+++ b/data/bug-list.html
@@ -56,6 +56,9 @@
     <script type="text/javascript" src="http://cloud.github.com/downloads/harthur/bz.js/bz-0.2.4.js"></script>
     <script type="text/javascript" src="bug-list.js"></script>
     <script type="text/javascript" src="bug-manager.js"></script>
+    <script type="text/javascript">
+        window.bugManager = new BugManager();
+    </script>
 
 </body>
 </html>
